<resources>
    <string name="app_name">VendorApp</string>

    <string name="login_activity_username">Username</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_signin">Sign In</string>
    <string name="login_failed">Login Failed. Try Again</string>
    <string name="login_sucess">Login Successfull</string>
    <string name="login_server_error">Server Error.Try Later</string>

    <string name="chanel_name_newOrder">New Orders</string>
    <string name="chanel_id_newOrder">NewOrder</string>
    <string name="chanel_desc_newOrder">Inform that a new order has been made</string>
    <string name="notification_content_title">New Order</string>


    <string name="new_order_order_number">Order No. %1$s</string>
    <string name="new_order_total_amount">\u20B9 %1$s</string>
    <string name="new_order_item_wise_price">\u20B9%1$sX</string>
    <string name="new_order_incomp_order_status_try_again">Unable to download.Try Again</string>
    <string name="new_order_incomp_order_status_loading">Loading</string>

    <string name="test_item_name">Veg Cheese Grilled Sandwich</string>
    <string name="test_item_quantity">3</string>
    <string name="test_order_number">Order No. 300</string>
    <string name="test_total_amount">\u20B9 300</string>
    <string name="test_item_wise_price">\u20B9100X</string>
    <string name="rupees_symbol">\u20B9</string>

    <string name="card_new_order_accept_bttn">Accept</string>
    <string name="card_new_order_decline_bttn">Decline</string>
    <string name="card_accepted_order_ready_bttn">Ready</string>
    <string name="card_accepted_order_finish_bttn">Finish</string>
    <string name="card_accepted_order_otp_bttn">OTP</string>
    <string name="group_view_holder_new_order_heading">Order</string>
    <string name="card_completed_order_delivered">Delivered</string>
    <string name="status_accepted">accepted</string>
    <string name="status_declined">declined</string>
    <string name="status_ready">ready</string>
    <string name="status_finish">finish</string>
    <string name="status_pending">pending</string>
    <string name="status_try_again">try again</string>
    <string name="status_loading">loading</string>




    <string name="number_of_pages_viewPger">2</string>
    <string name="heading_new_order_tab">New Orders</string>
    <string name="heading_accepted_order_tab">Accepted Orders</string>

    <string name="overflow_menu_toogle">Menu</string>
    <string name="overflow_menu_earnings">Earnings</string>
    <string name="overflow_menu_contactUs">Contact Us</string>
    <string name="overflow_menu_logout">Log Out</string>

    <string name="defaultStartDate">13</string>

    <string name="bosm_heading">BOSM\'19</string>
    <string name="vendorappheading">Vendor App</string>

    <string name="saved_jwt">jwt</string>
    <string name="saved_basic_jwt">Basic YXBwZDpmaXJlYmFzZXN1Y2tz</string>
    <string name="default_jwt_value">no_jwt_found</string>
    <string name="preference_file_login">loginfile</string>
    <string name="base_url_bosm">http://test.bits-bosm.org/</string>
    <string name="base_url_fake">https://my-json-server.typicode.com/PrarabdhGarg/VendorApp/</string>
    <string name="saved_vendor_id">vendor_id</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="default_vendor_id">no_vendor_found</string>

</resources>
