<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginscreen.view.MainActivity">


    <TextView
            android:text="@string/bosm_heading"
            android:layout_width="match_parent"
            android:textAlignment="center"

            android:layout_height="wrap_content"
            android:id="@+id/textViewBosmHeading" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="BOSM'19" android:textSize="24sp"/>
    <TextView
            android:text="@string/vendorappheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@+id/textViewBosmHeading" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" android:textSize="24sp" tools:text="Vendor App"/>
    <TextView
            android:text="@string/login_activity_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUsername"
            android:layout_marginTop="28dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextUsername"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login_activity_username"
            android:textSize="18sp"
            android:ems="10"
            android:id="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/textViewUsername"
            android:layout_marginStart="16dp" android:layout_marginLeft="16dp" android:text="Vendor1"/>

    <TextView
            android:text="@string/login_activity_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPassword"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp" app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_activity_password"
            android:textSize="18sp"
            android:ems="10"

            android:id="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewPassword"
            android:layout_marginStart="16dp" android:layout_marginLeft="16dp" android:text="firebasesucks"/>
    <Button
            android:text="@string/login_activity_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignIn" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" tools:text="@string/login_activity_signin"
            app:layout_constraintHorizontal_bias="0.498"/>

    <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintVertical_bias="0.499"
    android:id="@+id/prog_bar_main_activity"/>
</androidx.constraintlayout.widget.ConstraintLayout>