<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cons"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/accepted_image_view_arrow_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_expand_more_arrow_24px"
        android:fontFamily="@font/cabin"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="id#56687"
              android:layout_marginTop="8dp"
              android:id="@+id/textView_order_id"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
              android:textSize="16sp"
              app:layout_constraintEnd_toStartOf="@+id/button_OTP" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp"/>
    <TextView
            android:text="50000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_order_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_order_id"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"/>
    <Button
            android:text="@string/card_accepted_order_otp_bttn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/button_OTP"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintEnd_toStartOf="@+id/button_finish"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/card_accepted_order_finish_bttn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/button_finish"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accepted_image_view_arrow_button"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.0"/>

    <Button android:text="@string/card_accepted_order_ready_bttn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button_ready"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accepted_image_view_arrow_button"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_OTP"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/group_view_holder_accepted_order_screen_progressBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"
            android:visibility="invisible"
    />
</androidx.constraintlayout.widget.ConstraintLayout>